syntax = "proto3";

package WasmPrototype;

option csharp_namespace = "SwissPension.WasmPrototype.Common";

import "google/protobuf/empty.proto";

service Admin {
    // Demo Hello World
    rpc HelloWorld(google.protobuf.Empty) returns (HelloWorldResponse);
    // Streamed FetchUsers endpoint
    rpc FetchUsers(google.protobuf.Empty) returns (stream User);
}

message HelloWorldResponse {
    string message = 1;
}

message User {
    string name       = 1;
    string department = 2;
    string email      = 3;
}